@@ -1,3 +1,4 @@
+/cache*
 /src*
 /dist*
 *settings.sh.*
