@@ -24,6 +24,7 @@ MAKEDEPEND_VER=1.0.5
 CMAKE_VER=2.8.12
 CMAKE_SUBVER=2.8
 PKGCONFIG_VER=0.26
+CCACHE_VER=3.7.6
 
 
 ### System kernel ###
