@@ -1,4 +1,9 @@
 --- v3.7 (2019-xx-xx) ---
+* Add new package: ccache.
+* Add possibility to use ccache tool for (re)building of build environments. See
+  LXE_USE_CCACHE variable in settings.sh. This feature is disabled by default.
+  Cache directory is common for all systems: <LXE dir>/ccache
+  Common ccache config: <LXE dir>/ccache/ccache.conf
 * Package libxkbcommon: add ability to build static library.
 * Remove configs for some unsupported systems:
   - МСВС-3.0-80001-12_shared.sh
